# ai_wetter

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  build.sh  config.json  config.json.example  pyproject.toml  render.yaml  requirements.txt  start.sh
app/: __init__.py  app.py
app/data_sources/: __init__.py  base_source.py  ecmwf_source.py  gencast_source.py  meteoblue_source.py  meteologix_source.py
app/models/: __init__.py  forecast.py  location.py
app/resources/: locations.json
app/scripts/gencast/: cleanup_tpu.sh  process_results.py  provision_tpu.sh  run_inference.sh
app/services/: __init__.py  forecast_service.py  history_service.py  report_service.py
app/templates/: base.html  forecast.html  history.html  index.html  login.html  report.html  report_list.html
app/ui/: __init__.py  charts.py  forecast_view.py  history_view.py  location_selector.py  main_window.py  report_view.py
app/utils/: auth.py  config.py  logging.py  storage.py
nginx/: ai_wetter.conf.example
systemd/: ai_wetter.service.example
tests/: test_basic.py
