[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_wetter"
version = "0.1.0"
description = "Bulgarian Weather Forecast Tool"
readme = "README.md"
authors = [
    {name = "User", email = "user@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "flask==2.2.3",
    "matplotlib==3.7.1",
    "numpy==1.24.2",
    "requests==2.28.2",
    "python-dateutil==2.8.2"
]

[project.scripts]
ai_wetter = "app.app:main"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'$'

[tool.isort]
profile = "black"
line_length = 88